kube-manifestfiles/ALB-with-EKS/Ingress-groups/user-notifications-micro-service/user-notify-micro-service-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-mgmt-micro-service-deployment
  labels:
    app: user-mgmt-micro-service
    tier: backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mgmt-micro-service
      tier: backend
  template:
    metadata:
      labels:
        app: user-mgmt-micro-service
        tier: backend
    spec:
      containers:
        - name: user-notify-micro-service
          image: rudragajjala/user-notifications-service:1.0.0
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: user-notify-secret-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: user-notify-secret-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "user-mgmt-secrets"

---
apiVersion: v1
kind: Service

metadata:
  name: user-notify-nodeport-service
  labels:
    app: user-mgmt-micro-service
    tier: backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /notify/health

spec:
  type: NodePort
  selector:
    app: user-notify-micro-service
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
