kube-manifestfiles/ALB-with-EKS/Ingress-groups/user-notifications-micro-service/user-notify-micro-servcie-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-notify-alb-ingress
  labels:
    app: user-notify-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: usermgmt-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: usermgmt-app
    alb.ingress.kubernetes.io/group.order: '30'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/certificate-arn: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: usermgmtapi.devopspedia.online

spec:
  ingressClassName: aws-alb-ingress-class
  tls: 
    - hosts: 
        - "*.devopspedia.online"
  rules:
    - http:
        paths:
          - path: /notify
            pathType: Prefix
            backend:
              service:
                name: user-notify-nodeport-service
                port:
                  number: 80
